intended v0.1.1
+ Add dom.exposeGlobals()
+ Add a bunch more tags - P, H1-H4
+ implement addClass and removeClass
+ implement dom.waitForImage
+ implement Component#remove
+ create NODE class generators, such that you can define your own NODEs, e.g. BUTTON = NODES.createGenerator('button')
+ make attribute handling extensible, such that you can define your own attribute handlers, e.g. DIV({ data:dataObject })
+ implement style.gradient
+ implement dom.clipImage
+ implement dom.getViewportSize
+ implement dom.getWindowOf

v0.1.0
+ implement ui.dom